--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0"
   },
+  "overrides": {
+    "esbuild": "^0.27.2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.49.1",
